# ElectronInMagneticBottle

./: .gitignore  ClassesAndFunctions.md  ClassesAndFunctions.md.nogit  ElectronInMagneticBottle.py  README.md  VPyDraw.py  classes.py  vectortools.py  version.py
c/: CMakeLists.txt  WireCoilB.c  WireCoilPairB.c
cExtension/: CAPIWrapper.py  CMakeLists.txt
cExtension/include/: api.h
cExtension/include/bfield/: BField_c.h  BObject_c.h  WireCoil_c.h
cExtension/include/integrate/: gauss_legendre.h  numerical_int.h
cExtension/include/particle/: Particle_c.h
cExtension/include/testsuite/: testsuitetools.h  vectortoolstest.h
cExtension/include/tools/: constsandtypes.h  vectortools.h
cExtension/include/vis/: ItemDraw_c.h  MinVR.h
cExtension/src/: CMakeLists.txt  api.cpp
cExtension/src/bfield/: BField_c.cpp  WireCoil_c.cpp
cpp - gl test/: CMakeLists.txt  gauss_legendre.c  wirecoilbplusint.cpp
examples/: 1eInDualWireLoop.py  1eInMBNoVis.py  1eInMagBottle.py  2CrossedWireLoops.py  2eIn2SeparateLoops.py  2eInDualWireLoop.py  2eInSeparateLoops.py  APItest.py  ElectronFieldLines.py  ElectronInMagneticBottle.py  FORK.csv  FORKtest.py  FourthOrderRungeKutta.py  HelmholzCoil.py  Ind,P,T,NoVis.py  LoopNoVisualPrintToScreen.py  LoopNoVisualSaveResults.py  TwoElectrons.py
examples/MinVR2/: desktop.xml  example.py  field.py
tests/: testBVPnoVisual.py  testBcalc.py  testCSRotAndTrans.py  testPerformanceProfiler.py  testTransform.py
tools/: DataCruncher.py
vis/: OpenGLDraw.py  OpenGLTest.py  VPyDraw.py
vis/MinVR2/: MinVR2.py  __init__.py
(+7 files in other folders)
